@@ -3,6 +3,10 @@
 	* src/*
 	fixed several memleaks
 	code cleanups
+	
+	* src/ppogl/base/error.* src/main.cpp src/gl_utils.cpp
+	improved log system
+	added commandline options	
 
 2005-09-27
 	* data/config.nut.in
